plugins {
	id 'org.springframework.boot' version '2.3.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
	id 'com.lingocoder.mrjar' version '0.0.16'
}

 mrjar { moduleName = 'todo.modules.demo' }

 allprojects {
    
    apply plugin: 'com.lingocoder.mrjar'
    
    java {
        modularity.inferModulePath.set(true)
    }

    repositories {
        jcenter()
        mavenCentral()
    }    
}

group = 'works.hop'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '13'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

test {
	useJUnitPlatform()
}

jar {
	enabled = false
}

bootJar {
	mainClassName = 'works.hop.todo.app.TodoApplication'
}

task printClasspath( ){ 
   doLast{ 
       println project['configurations']['compileClasspath'].asPath
   }
}

tasks.withType( JavaCompile ){
    options.compilerArgs += ['-Xlint:unchecked', '--enable-preview']
}